× click.xml → simpler web.xml